RESOLVED FIXED144098
Some media tests assert after r183096
https://bugs.webkit.org/show_bug.cgi?id=144098
Summary Some media tests assert after r183096
Eric Carlson
Reported 2015-04-23 06:33:19 PDT
The assertion added to Document::removePlaybackTargetPickerClient in r183096 is too aggressive, it it not an error for it to be called more than once.
Attachments
Proposed patch. (5.25 KB, text/plain)
2015-04-23 06:58 PDT, Eric Carlson
no flags
Another patch. (1.79 KB, patch)
2015-04-29 12:07 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2015-04-23 06:34:06 PDT
Eric Carlson
Comment 2 2015-04-23 06:58:23 PDT
Created attachment 251431 [details] Proposed patch.
Darin Adler
Comment 3 2015-04-23 08:10:50 PDT
Comment on attachment 251431 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=251431&action=review > Source/WebCore/dom/Document.cpp:6553 > + const auto& it = m_clientToIDMap.find(&client); Best type to use here is probably auto rather than const auto&. Same thing below. > Source/WebCore/dom/Document.cpp:6559 > m_clientToIDMap.remove(&client); This should be remove(it), not remove(&client); passing &client results in a second hash table lookup.
Eric Carlson
Comment 4 2015-04-23 09:00:23 PDT
Eric Carlson
Comment 5 2015-04-23 09:01:01 PDT
By which I meant r183185 and r183187 of course.
Eric Carlson
Comment 6 2015-04-29 11:57:44 PDT
Reopened, test still occasionally crash.
Eric Carlson
Comment 7 2015-04-29 12:07:08 PDT
Created attachment 251974 [details] Another patch.
Brent Fulgham
Comment 8 2015-04-29 13:52:19 PDT
Comment on attachment 251974 [details] Another patch. r=me
WebKit Commit Bot
Comment 9 2015-04-29 14:45:29 PDT
Comment on attachment 251974 [details] Another patch. Clearing flags on attachment: 251974 Committed r183578: <http://trac.webkit.org/changeset/183578>
WebKit Commit Bot
Comment 10 2015-04-29 14:45:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.